fixed nav bar width on small windows 🍔

--- a/style_index.css
+++ b/style_index.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 16px;
+  background-color: #303030;
 }
 
 @media screen and (max-width: 1000px) {
@@ -37,12 +38,11 @@ nav {
   border-width: 1px;
   border-color: silver;
   align-items: center;
-  align-self: stretch;
   height: auto;
+  width: 100%;
   position: fixed;
   left: 0;
   top: 0;
-  width: 100vw;
   background-color: rgb(48, 48, 48, 0.75);
   z-index: 1;
   padding-top: env(safe-area-inset-top); 
@@ -117,6 +117,7 @@ h1 > a {
   color: white;
 }
 
+/* Responsive nav bar media query starts here */
 @media screen and (max-width: 700px) {
   nav {
     height: auto;
@@ -152,7 +153,6 @@ h1 > a {
     width: 95vw;
     height: 3rem;
     margin: 0.25em 0em;
-    border-radius: 0;
     opacity: 1;
     background-color: #303030;
   }
@@ -225,7 +225,7 @@ video {
 
 @media (orientation: portrait) {
   .showreel-container {
-    height: 45em;
+    height: 55em;
   }
 
   .showreel > video {
@@ -262,7 +262,7 @@ video {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-self: stretch;
-  padding: 25px 0px;
+  padding: 2.5vw 0vh;
 }
 
 @media screen and (max-width: 1020px) {
